# TeaSpoon

./: .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
teaspoon/: app.py  index.py
teaspoon/routes/: home.py
teaspoon/static/: styles.css
teaspoon/templates/: index.html
