[tool.poetry]
name = "teaspoon"
version = "0.1.0"
description = ""
authors = ["LosEvons <emil.malk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
invoke = "^2.2.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
